--- a/state-auto/angular.json
+++ b/state-auto/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/Property-Hunt",
+            "outputPath": "dist/property-hunt",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -62,18 +62,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "Property-Hunt:build"
+            "browserTarget": "property-hunt:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "Property-Hunt:build:production"
+              "browserTarget": "property-hunt:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "Property-Hunt:build"
+            "browserTarget": "property-hunt:build"
           }
         },
         "test": {
@@ -110,15 +110,15 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "Property-Hunt:serve"
+            "devServerTarget": "property-hunt:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "Property-Hunt:serve:production"
+              "devServerTarget": "property-hunt:serve:production"
             }
           }
         }
       }
     }},
-  "defaultProject": "Property-Hunt"
+  "defaultProject": "property-hunt"
 }
